# APPS-Project

Doxygen/: _apps__main_8cpp__incl.map  _apps__main_8cpp_a0540d5b779e3043146fcef386d0c68da_cgraph.md5  _apps__main_8cpp_a0540d5b779e3043146fcef386d0c68da_icgraph.map  _apps__main_8cpp_a0540d5b779e3043146fcef386d0c68da_icgraph.md5  _apps__main_8cpp_a14150c3284c77b56c8bbc248668ef79e_icgraph.map  _apps__main_8cpp_a1590b6317e93c68df9d9c6defb0eae67_cgraph.map  _apps__main_8cpp_a1590b6317e93c68df9d9c6defb0eae67_icgraph.md5  _apps__main_8cpp_a4f5553f2a1b55ee62b0401a3b565a155_cgraph.map  _apps__main_8cpp_a4f5553f2a1b55ee62b0401a3b565a155_cgraph.md5  _apps__main_8cpp_a4f5553f2a1b55ee62b0401a3b565a155_icgraph.map  _apps__main_8cpp_aaa8d5912c4a7eea4a7adccb5ee7681f2_icgraph.md5  _apps__main_8hpp.html  _apps__main_8hpp.js  _apps__main_8hpp_afea1e8b2cd74b6a25b94c16d30d79420_cgraph.map  annotated_dup.js  audio_defines_8hpp.html  audio_defines_8hpp__dep__incl.md5  audio_defines_8hpp_source.html  buttons_8cpp.html  buttons_8hpp_source.html  class_button_a338b2af396a690d3a146312b4fb160e2_icgraph.md5  class_button_a3bcee333474dfe20a2f30cc0b4f9dbba_cgraph.md5  class_button_a3bcee333474dfe20a2f30cc0b4f9dbba_icgraph.map  class_button_a3bcee333474dfe20a2f30cc0b4f9dbba_icgraph.md5  (+203 more)
Stem-trainer/main/: Apps_main.cpp  Apps_main.hpp  CMakeLists.txt  main.cpp  statemachine.cpp  statemachine.hpp  statemachine_old.cpp  statemachine_old.hpp
Stem-trainer/main/drivers/: buttons.cpp  buttons.hpp  led_driver.cpp  led_driver.hpp  leds.hpp  max7312.cpp  max7312.hpp  mp3_driver.cpp  mp3_driver.hpp
Stem-trainer/main/hardware_drivers/: Led_Driver.cpp  Led_Driver.hpp  adc.cpp  adc.hpp  buttons.cpp  leds.hpp  max7312.cpp  max7312.hpp  servo_driver.cpp  servo_driver.hpp
Stem-trainer/main/helper_functions/: audioDefines.hpp  defines.hpp  helper_functions.cpp  helper_functions.hpp  queue.cpp  queue.hpp  timer.cpp  timer.hpp
Stem-trainer/main/microphone/: microphone_i2s.hpp  signalprocessing.cpp  signalprocessing.hpp
Stem-trainer/main/software_drivers/: mp3_driver.cpp  mp3_driver.hpp  uart.hpp
Stem_coach_v2/sample_project/main/: Apps_main.cpp  CMakeLists.txt  main.cpp  statemachine.cpp  statemachine.hpp
Stem_coach_v2/sample_project/main/hardware_drivers/: Led_Driver.cpp  Led_Driver.hpp  adc.cpp  adc.hpp  buttons.cpp  buttons.hpp  leds.cpp  leds.hpp  oled.cpp  oled.hpp  servo_driver.cpp  servo_driver.hpp
Stem_coach_v2/sample_project/main/helper_functions/: audioDefines.hpp  defines.hpp  helper_functions.cpp  helper_functions.hpp  queue.cpp  queue.hpp  timer.cpp  timer.hpp
Stem_coach_v2/sample_project/main/microphone/: microphone_i2s.cpp
Stem_coach_v2/sample_project/main/software_drivers/: handler.cpp  handler.hpp  mp3_driver.cpp  mp3_driver.hpp  uart.cpp  uart.hpp
(+320 files in other folders)
